--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,23 @@
 results:
   -
-    provision_time: 1m 13s
+    provision_time: 1m 10s
+    image_size: 1724 Mb
+    balena_os_version: 2.21.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Update supervisor through the API
+
+
+      # Summary
+      - planned: 1
+      - pass: 1
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-11-5
+    PS_UUID: ad6ac970-e0fb-11e8-ac82-ef522ce38ac0
+  - provision_time: 1m 13s
     image_size: 1724 Mb
     balena_os_version: 2.21.0+rev1.prod
     body: |-
