--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,49 @@
 results:
   -
-    provision_time: 1m 10s
+    provision_time: 1m 9s
+    image_size: 1724 Mb
+    balena_os_version: 2.21.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✖ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+       - ✖ SSH error:
+
+
+      # Summary
+      - planned: 10
+      - pass: 8
+      - fail: 2
+
+      # Fails
+      ## Update supervisor through the API
+          ✖ Update supervisor through the API
+          undefined
+      ## SSH error:
+          ✖ SSH error:
+          {
+              "autoend": true,
+              "at": {
+                  "line": 83,
+                  "column": 16,
+                  "file": "lib/utils.js",
+                  "function": "ChildProcess.ssh.on"
+              },
+              "stack": "ChildProcess.ssh.on (lib/utils.js:83:16)\n",
+              "test": "TAP",
+              "source": "reject(new Error(`SSH error: ${stderr}`))\n"
+          }
+    author: null
+    timestamp: 2018-11-5
+    PS_UUID: b54cc300-e0fb-11e8-b091-ed9a6431aeef
+  - provision_time: 1m 10s
     image_size: 1724 Mb
     balena_os_version: 2.21.0+rev1.prod
     body: |-
