--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,23 @@
 results:
   -
-    provision_time: 1m 8s
+    provision_time: 1m 7s
+    image_size: 1724 Mb
+    balena_os_version: 2.21.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+
+
+      # Summary
+      - planned: 1
+      - pass: 1
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-11-5
+    PS_UUID: eafd42c0-e111-11e8-b9f7-1beda6444d54
+  - provision_time: 1m 8s
     image_size: 1724 Mb
     balena_os_version: 2.21.0+rev1.prod
     body: |-
