--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,23 @@
 results:
   -
-    provision_time: 1m 5s
+    provision_time: 0m 59s
+    image_size: 1724 Mb
+    balena_os_version: 2.21.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+
+
+      # Summary
+      - planned: 1
+      - pass: 1
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-11-5
+    PS_UUID: 714430d0-e114-11e8-94ab-87a69848a4cb
+  - provision_time: 1m 5s
     image_size: 1724 Mb
     balena_os_version: 2.21.0+rev1.prod
     body: |-
