--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 0m 59s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-5
+    PS_UUID: f3bfdb80-e115-11e8-8689-7f95e417b68f
+  - provision_time: 0m 59s
     image_size: 1724 Mb
     balena_os_version: 2.21.0+rev1.prod
     body: |-
