--- a/results.yaml
+++ b/results.yaml
@@ -7,6 +7,34 @@ results:
       # Tests 
        - ✔ Device is online
        - ✔ Device reported hostOS version
+       - ✖ Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 8
+      - fail: 1
+
+      # Fails
+      ## Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+          ✖ Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+          undefined
+    author: null
+    timestamp: 2018-11-5
+    PS_UUID: e9eb9af0-e12d-11e8-9aff-fdc72f55fba4
+  - provision_time: 1m 7s
+    image_size: 1724 Mb
+    balena_os_version: 2.21.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
        - ✔ Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
        - ✔ Image filename format
        - ✔ Push a mono-container to the application
