--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-11-5
+    PS_UUID: 4bb5a410-e13d-11e8-b770-2729061ed103
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-5
     PS_UUID: 3a7d8120-e135-11e8-95f3-bdd8449e46a5
   - provision_time: 1m 7s
     image_size: 1724 Mb
