--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,53 @@
 results:
   -
+    provision_time: 1m 8s
+    image_size: 1724 Mb
+    balena_os_version: 2.21.0+rev1.prod
     body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Reboot device multiple times
+       - ✔ Device reported hostOS version
+       - ✖ Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✖ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+       - ✖ SSH error:
+
+
+      # Summary
+      - planned: 11
+      - pass: 8
+      - fail: 3
+
+      # Fails
+      ## Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+          ✖ Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+          undefined
+      ## Update supervisor through the API
+          ✖ Update supervisor through the API
+          undefined
+      ## SSH error:
+          ✖ SSH error:
+          {
+              "autoend": true,
+              "at": {
+                  "line": 83,
+                  "column": 16,
+                  "file": "lib/utils.js",
+                  "function": "ChildProcess.ssh.on"
+              },
+              "stack": "ChildProcess.ssh.on (lib/utils.js:83:16)\n",
+              "test": "TAP",
+              "source": "reject(new Error(`SSH error: ${stderr}`))\n"
+          }
+    author: null
+    timestamp: 2018-11-6
+    PS_UUID: 4a303bc0-e16d-11e8-a419-1f6689acd261
+  - body: |-
       # Tests 
 
 
