--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-11-6
+    PS_UUID: 8bc2bde0-e1a1-11e8-9b32-0b765975eea8
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-6
     PS_UUID: 28f6f800-e199-11e8-a42f-031cdaeb5020
   - provision_time: 1m 8s
     image_size: 1724 Mb
