--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-11-6
+    PS_UUID: 47d0d2e0-e1b8-11e8-a39a-b9bff654092d
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-6
     PS_UUID: dcf5ba80-e1b2-11e8-8e13-57839e9b2d66
   - body: |-
       # Tests 
