--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-11-6
+    PS_UUID: f782dd10-e1bc-11e8-b3d2-d3984bc1ba7d
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-6
     PS_UUID: b81bc8d0-e1bc-11e8-ad61-0f10a955c2b7
   - body: |-
       # Tests 
