--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-11-6
+    PS_UUID: aa4f1c60-e1bd-11e8-ada4-3d2c8e04481d
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-6
     PS_UUID: f782dd10-e1bc-11e8-b3d2-d3984bc1ba7d
   - body: |-
       # Tests 
