--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-11-6
+    PS_UUID: 74133140-e1c2-11e8-aa28-91af4070dc23
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-6
     PS_UUID: aa4f1c60-e1bd-11e8-ada4-3d2c8e04481d
   - body: |-
       # Tests 
