--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 7s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-6
+    PS_UUID: 7b0d2d10-e1c8-11e8-8e70-1dd9575e4946
+  - provision_time: 1m 7s
     image_size: 1724 Mb
     balena_os_version: 2.19.0+rev1.prod
     body: |-
