--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 6s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-6
+    PS_UUID: 37adec80-e1dc-11e8-ab6e-374a0f6243ab
+  - provision_time: 1m 6s
     image_size: 1724 Mb
     balena_os_version: 2.19.0+rev1.prod
     body: |-
