--- a/results.yaml
+++ b/results.yaml
@@ -27,6 +27,34 @@ results:
           undefined
     author: null
     timestamp: 2018-11-6
+    PS_UUID: 2fb07780-e1e3-11e8-8b76-75dec2e82637
+  - provision_time: 1m 8s
+    image_size: 1724 Mb
+    balena_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✖ Balena host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 8
+      - fail: 1
+
+      # Fails
+      ## Balena host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+          ✖ Balena host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+          undefined
+    author: null
+    timestamp: 2018-11-6
     PS_UUID: 3dbc1e30-e1e1-11e8-9edd-217d527ff2d9
   - body: |-
       # Tests 
