--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 8s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-6
+    PS_UUID: cd763ae0-e1e8-11e8-9125-c36408504f0b
+  - provision_time: 1m 8s
     image_size: 1724 Mb
     balena_os_version: 2.19.0+rev1.prod
     body: |-
