--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 6s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-6
+    PS_UUID: 40a244d0-e1fa-11e8-91a4-2b96dd3de154
+  - provision_time: 1m 6s
     image_size: 1724 Mb
     balena_os_version: 2.19.0+rev1.prod
     body: |-
