--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-11-6
+    PS_UUID: 5777cfe0-e1ff-11e8-8c91-61816f154c53
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-6
     PS_UUID: 40a244d0-e1fa-11e8-91a4-2b96dd3de154
   - provision_time: 1m 6s
     image_size: 1724 Mb
