--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-11-6
+    PS_UUID: 81b459e0-e20e-11e8-b1c6-b9132ea2cd42
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-6
     PS_UUID: 1ff0b530-e206-11e8-8f73-65cd768436e0
   - body: |-
       # Tests 
